test/frontend/fail/no_viable_candidate.osl
void foo() {}
string foo() { return "abcd"; }
vector foo(int x, float y) { return 1; }

shader bar() {
    vector v = foo();
}
